# SLM_team11

./: .gitignore  README.md  env_requirements.yaml  main.py  pyproject.toml  ruff.toml
data/: prepare.py
scenarios/: inference_scenarios.json  prompts.txt  training_scenarios.json
src/: model.py  paths.py  prompt.py  run_common.py  train.py
